# bd_scan_yocto

./: pyproject.toml  setup.py
bd_scan_yocto/: bd_scan_process.py  config.py  global_values.py  main.py
