[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bd_scan_yocto"
version = "1.0.12"
authors = [
  { name="Matthew Brady", email="mbrad@synopsys.com" },
]
description = "Process a built Yocto project to create a Black Duck project version"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "blackduck>=1.0.4",
    "requests",
    "aiohttp>=3.9.3",
]

[tools.setuptools]
packages = [
    { include = "bd_scan_yocto/*.py" },
]

[console_scripts]
bd-scan-yocto = "bd_scan_yocto.main"

[project.urls]
"Homepage" = "https://github.com/blackducksoftware/bd_scan_yocto"
"Bug Tracker" = "https://github.com/blackducksoftware/bd_scan_yocto/issues"